--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 canvas {
-    margin-top: 25px;
     background: linear-gradient( rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3) ), url("../Assets/night.jpeg");
     width: 50%;
-    border: 2px solid black;
+    border: 4px solid rgb(0, 0, 0);
+    box-shadow: 0px 0px 5px rgb(116, 13, 13);
 }
 body {
     text-align: center;
@@ -11,9 +11,63 @@ body {
     background-repeat: no-repeat;
     font-family: 'Carrois Gothic SC', sans-serif;
     font-size: 30px;
-    color: black;
-    text-shadow: 0px 1px 2px white;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 2px rgb(250, 7, 7);
 }
-h6{
-    margin: 30px;
+h1 {
+    margin:40px 0px 25px 0px;
+    padding:0;
+    text-shadow: 0px 0px 5px rgb(250, 7, 7);
+}
+h4 {
+    font-size: 25px;
+    margin:0px;
+    padding:0;
+}
+h5 {
+    font-size: 18px;
+    margin:0px;
+    padding:0;
+    color: white;
+    text-shadow: 0px 0px 2px rgb(255, 1, 1);
+}
+
+.button {
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
+  cursor: pointer;
+  font-family: Neucha, sans-serif;
+  font-size: 1rem;
+  line-height: 23px;
+  outline: none;
+  padding: .75rem;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-top: 5px;
+}
+
+.button:hover {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+  transform: translate3d(0, 2px, 0);
+}
+
+.button:focus {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
 }
